tests/fail/evaler1.dit
A {
    String value;
    validator Python {{
        return 'This is a test error'
    }}
}

A a;
a.value = 'test';